--- a/composer.json
+++ b/composer.json
@@ -2,9 +2,10 @@
     "type": "project",
     "license": "proprietary",
     "require": {
-        "php": "^7.2.5",
+        "php": "^7.4",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "lstrojny/functional-php": "^1.11",
         "symfony/console": "5.0.*",
         "symfony/dotenv": "5.0.*",
         "symfony/flex": "^1.3.1",
@@ -12,6 +13,7 @@
         "symfony/yaml": "5.0.*"
     },
     "require-dev": {
+        "rector/rector": "^0.7.26"
     },
     "config": {
         "preferred-install": {
@@ -21,7 +23,8 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/"
+            "App\\": "src/App",
+            "TheUniC\\": "src/TheUniC"
         }
     },
     "autoload-dev": {
@@ -57,6 +60,7 @@
         "symfony": {
             "allow-contrib": false,
             "require": "5.0.*"
-        }
+        },
+        "src-dir": "src/App"
     }
 }
